Implemented Context listing service, configuration file handling and global object sharing.
