# middleware/swagger_server/models/context.py
@@ -12,7 +12,7 @@ class Context(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, average_size: int=None, enabled: bool=None, filestore_id: int=None, filestore_name: str=None, id: int=None, login_mappings: str=None, name: str=None, read_database: object=None, write_database: object=None, used_quota: int=None, user_attributes: object=None):
+    def __init__(self, average_size: int=None, enabled: bool=None, filestore_id: int=None, filestore_name: str=None, id: int=None, login_mappings: str=None, max_quota: int=None, name: str=None, read_database: object=None, write_database: object=None, used_quota: int=None, user_attributes: object=None):
         """
         Context - a model defined in Swagger
 
@@ -28,6 +28,8 @@ class Context(Model):
         :type id: int
         :param login_mappings: The login_mappings of this Context.
         :type login_mappings: str
+        :param max_quota: The max_quota of this Context.
+        :type max_quota: int
         :param name: The name of this Context.
         :type name: str
         :param read_database: The read_database of this Context.
@@ -46,6 +48,7 @@ class Context(Model):
             'filestore_name': str,
             'id': int,
             'login_mappings': str,
+            'max_quota': int,
             'name': str,
             'read_database': object,
             'write_database': object,
@@ -60,6 +63,7 @@ class Context(Model):
             'filestore_name': 'filestore_name',
             'id': 'id',
             'login_mappings': 'loginMappings',
+            'max_quota': 'maxQuota',
             'name': 'name',
             'read_database': 'readDatabase',
             'write_database': 'writeDatabase',
@@ -73,6 +77,7 @@ class Context(Model):
         self._filestore_name = filestore_name
         self._id = id
         self._login_mappings = login_mappings
+        self._max_quota = max_quota
         self._name = name
         self._read_database = read_database
         self._write_database = write_database
@@ -230,6 +235,31 @@ class Context(Model):
         """
 
         self._login_mappings = login_mappings
+
+    @property
+    def max_quota(self) -> int:
+        """
+        Gets the max_quota of this Context.
+        The Drive quota setting of a context
+
+        :return: The max_quota of this Context.
+        :rtype: int
+        """
+        return self._max_quota
+
+    @max_quota.setter
+    def max_quota(self, max_quota: int):
+        """
+        Sets the max_quota of this Context.
+        The Drive quota setting of a context
+
+        :param max_quota: The max_quota of this Context.
+        :type max_quota: int
+        """
+        if max_quota is None:
+            raise ValueError("Invalid value for `max_quota`, must not be `None`")
+
+        self._max_quota = max_quota
 
     @property
     def name(self) -> str:
